feat: docs for meeting scheduler and noti service
